--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "@testing-library/jest-dom": "^5.14.1",
     "@testing-library/react": "^11.2.7",
     "@testing-library/user-event": "^12.8.3",
+    "babel-upgrade": "^1.0.1",
     "classes": "^0.3.0",
     "classnames": "^2.3.1",
     "react": "^17.0.2",
